[package]
name = "chump-gh-app"
version = "0.1.0"
edition = "2021"
description = "GitHub App JWT generation and installation-token fetching for Chump lane isolation (INFRA-1360)"
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-gh-app"
license = "AGPL-3.0-only"
keywords = ["github", "jwt", "app", "token", "installation"]
categories = ["authentication", "api-bindings"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1", features = ["parse"] }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Enable async runtime for standalone use outside the chump binary
rt = ["dep:tokio"]
