[package]
name = "chump-git-hooks"
version = "0.1.0"
edition = "2021"
description = "Rust-native git hook framework for Chump: HookContext with env-immunity (INFRA-1950 root-cause class), pluggable Hook trait, and concrete ForceWithLeaseRaceGuard (INFRA-345 Guard 3 port). Phase 1 of INFRA-1997 / META-107 Rust-first migration."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-git-hooks"
license = "MIT"
keywords = ["git", "hooks", "pre-push", "chump", "ci"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "chump-pre-push"
path = "src/bin/chump-pre-push.rs"
