[package]
name = "chump-handoff"
version = "0.1.0"
edition = "2021"
description = "INFRA-1720: typed contracts for parent->subagent handoffs (replaces free-form markdown prompts with serde-validated JSON I/O)."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1", features = ["process", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros"] }
serde_json = "1"
tempfile = "3"
serial_test = "3"
