[package]
name = "chump-integrator"
version = "0.1.0"
edition = "2021"
description = "META-124 integration daemon: batches ready-to-ship gaps through preflight before committing to SHIP. Phase 1 dry-run only."
repository = "https://github.com/repairman29/chump"
license = "AGPL-3.0-only"
keywords = ["agent", "integration", "ci", "ship", "batching"]
categories = ["development-tools"]

[[bin]]
name = "chump-integrator"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow          = "1.0"
async-nats      = "0.49"
chrono          = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1.0"
tokio           = { version = "1", features = ["full"] }
uuid            = { version = "1", features = ["v4"] }
chump-coord     = { path = "../chump-coord", version = "0.2.0" }
chump-gap-store = { path = "../chump-gap-store", version = "0.2.0" }
chump-ambient-cli = { path = "../ambient-cli", version = "0.1.0" }

[dev-dependencies]
serial_test = "3"
tempfile    = "3"

[lints]
workspace = true
