[package]
name = "chump-messaging"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic messaging trait for LLM agents: a MessagingAdapter contract that Telegram / Slack / Matrix / Discord / web adapters implement, with capabilities-as-fields IncomingMessage / OutgoingMessage types so adapters with weaker features just leave fields empty."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-messaging"
license = "MIT"
keywords = ["agent", "messaging", "telegram", "slack", "trait"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
