[package]
name = "chump-orchestrator"
version = "0.1.0"
edition = "2021"
description = "AUTO-013 — Chump self-dispatching orchestrator. MVP step 1: gap-picker + dry-run. Subprocess spawn, monitor, and reflection ship in follow-up PRs."
repository = "https://github.com/repairman29/chump"
license = "MIT"
keywords = ["agent", "orchestrator", "dispatch", "multi-agent"]
categories = ["development-tools"]

[[bin]]
name = "chump-orchestrator"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow     = "1.0"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
