[package]
name = "chump-orchestrator"
version = "0.1.0"
edition = "2021"
description = "AUTO-013 — Chump self-dispatching orchestrator. MVP steps 1-4: gap-picker, subprocess spawn, monitor loop, reflection writes per dispatch outcome."
repository = "https://github.com/repairman29/chump"
license = "MIT"
keywords = ["agent", "orchestrator", "dispatch", "multi-agent"]
categories = ["development-tools"]

[[bin]]
name = "chump-orchestrator"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow     = "1.0"
chrono     = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite   = { version = "0.32", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
# COG-025: backend-selector tests mutate process env (CHUMP_DISPATCH_BACKEND).
# Cargo runs tests in parallel by default — serialise these so they don't
# stomp on each other's env state.
serial_test = "3"
tempfile = "3"
