[package]
name = "chump-planner"
version = "0.1.0"
edition = "2021"
description = "Rank, graph, and recommend the chump gap backlog. Turns '151 open gaps' into 'here are the N you should dispatch next, in this order, and here's why'."
repository = "https://github.com/repairman29/chump"
license = "MIT"
keywords = ["agent", "planner", "scheduling", "dependency-graph", "chump"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "chump-plan"
path = "src/bin/chump-plan.rs"

[dependencies]
anyhow     = "1.0"
chrono     = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap       = { version = "4", features = ["derive"] }
once_cell  = "1.19"
petgraph   = "0.8"
regex      = "1"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2       = "0.11"
thiserror  = "2"
tracing    = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
