[package]
name = "chump-reviewer-routing"
version = "0.1.0"
edition = "2021"
description = "Smart reviewer routing for fleet PRs. Deterministic suggestion from (recent committers ∪ CODEOWNERS ∪ operator override). Marcus M-E surface (INFRA-1491)."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-reviewer-routing"
license = "MIT"
keywords = ["pr", "reviewer", "routing", "fleet", "agent"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
anyhow = "1.0"

[lints]
workspace = true

[[bin]]
name = "chump-reviewer-routing"
path = "src/bin/chump-reviewer-routing.rs"
