[package]
name = "chump-ship"
version = "0.2.0"
edition = "2021"
description = "Ship trait + ManualShipPath for Chump's ship pipeline (INFRA-1229 planner + INFRA-2001 Phase 2 executor); concrete impl with PID-locked single-instance fixing INFRA-1532 by construction"
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-ship"
license = "AGPL-3.0-only"
keywords = ["ship", "github", "pull-request", "chump", "merge"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "chump-ship"
path = "src/bin/chump-ship.rs"

[lints]
workspace = true
